--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <input id="duration" value="30"/>
     <button id="start">Start</button>
     <button id="pause">Pause</button>
-
-<script src="app.js"></script>  
+<script scr="timer.js"></script>
+<script src="index.js"></script>  
 </body>
 </html>
